@@ -4,6 +4,7 @@ import org.hl7.fhir.utilities.http.IHTTPAuthenticationProvider;
 import org.hl7.fhir.utilities.http.ManagedWebAccessUtils;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -14,7 +15,7 @@ public class PackageServerHTTPAuthProvider implements IHTTPAuthenticationProvide
 
   public PackageServerHTTPAuthProvider(PackageServer server) throws MalformedURLException {
     this.server = server;
-    this.url = new URL(server.getUrl());
+    this.url = URI.create(server.getUrl()).toURL();
   }
 
   @Override
